<resources>
    <string name="app_name">ghennadiiganenko-online-shop</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="sign_in_button">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="user_is_already_registered">User is already registered</string>
    <string name="you_need_to_fill_all_the_fields">You need to fill all the fields correctly</string>
    <string name="incorrectly_entered_data">Incorrectly entered data</string>
    <string name="you_need_to_fill_in_the_first_name">You need to fill in the first name</string>
    <string name="trade_by_font_color_color_blue_bata_font">Trade by <font color='#4E55D7'>bata</font></string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="location">Location</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="change_photo">Change photo</string>
    <string name="user_name">User Name</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade Store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade History</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="price_double">$ %1$.2f</string>
    <string name="price">$ %1$d</string>
    <string name="balance_number">$ 0</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="_0_0">0.0</string>
    <string name="_0_reviews">(0 reviews)</string>
    <string name="color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_2_500">#2,500</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="category">Category</string>
    <string name="discount">%1$d\%% off</string>
</resources>