<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ghost_white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/sign_in"
            android:textSize="26sp"
            android:textColor="@color/black_russian"
            android:fontFamily="@font/montserrat_semibold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyRegisteredWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/user_is_already_registered"
            android:textColor="@color/cerise"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmptyFieldWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/you_need_to_fill_all_the_fields"
            android:textColor="@color/cerise"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.33"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="13sp"
            android:textAlignment="center"
            android:autofillHints="name"
            android:maxLength="30" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.41"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="13sp"
            android:textAlignment="center"
            android:autofillHints="name"
            android:maxLength="30" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.49"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="13sp"
            android:textAlignment="center"
            android:autofillHints="emailAddress"
            android:maxLength="35" />
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.58"
            android:layout_marginHorizontal="43dp"
            android:background="@drawable/button_confirm_background"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            android:textColor="@color/mercury"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.64"
            android:layout_marginStart="42dp"
            android:text="@string/already_have_an_account"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/gray80" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvAlreadyHaveAnAccount"
            app:layout_constraintBottom_toBottomOf="@id/tvAlreadyHaveAnAccount"
            app:layout_constraintStart_toEndOf="@id/tvAlreadyHaveAnAccount"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/blue25" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.735"
            android:layout_marginStart="99dp"
            android:src="@drawable/ic_google" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivGoogle"
            app:layout_constraintBottom_toBottomOf="@id/ivGoogle"
            app:layout_constraintStart_toEndOf="@id/ivGoogle"
            android:layout_marginStart="11.17dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.813"
            android:layout_marginStart="99dp"
            android:src="@drawable/ic_apple" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivApple"
            app:layout_constraintBottom_toBottomOf="@id/ivApple"
            app:layout_constraintStart_toEndOf="@id/ivApple"
            android:layout_marginStart="13.62dp"
            android:text="@string/sign_in_with_apple"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>