<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ghost_white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:text="@string/welcome_back"
            android:textSize="26sp"
            android:textColor="@color/black_russian"
            android:fontFamily="@font/montserrat_semibold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIncorrectDataWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/incorrectly_entered_data"
            android:textColor="@color/cerise"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmptyFirstNameWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/you_need_to_fill_in_the_first_name"
            android:textColor="@color/cerise"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.33"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="13sp"
            android:textAlignment="center"
            android:autofillHints="name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.41"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="13sp"
            android:textAlignment="center"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye_off"
            android:paddingHorizontal="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.58"
            android:layout_marginHorizontal="43dp"
            android:background="@drawable/button_confirm_background"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/mercury"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>