<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="114dp"
        android:layout_height="149dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="9dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLatestImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/placeholder_image"
                    android:scaleType="centerCrop"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    android:text="@string/plus"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/amethyst"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="@color/white_blue"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/price"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="7sp"
                    android:textColor="@color/white"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="75dp"
                    android:layout_height="26dp"
                    app:layout_constraintBottom_toTopOf="@id/tvPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/product_name"
                    android:lines="2"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="9sp"
                    android:textColor="@color/white"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="3dp"
                    android:paddingVertical="3dp"
                    android:paddingHorizontal="7dp"
                    android:background="@drawable/category_background"
                    android:text="@string/category"
                    android:lines="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="6sp"
                    android:textColor="@color/black07"
                    tools:ignore="SmallSp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>