<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="174dp"
        android:layout_height="221dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="11dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="11dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFlashSaleImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/placeholder_image"
                    android:scaleType="centerCrop"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    android:text="@string/plus"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/amethyst"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="@color/white_blue"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFavourite"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnAdd"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_favourite_heart"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="@color/white_blue"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/price"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="7sp"
                    android:textColor="@color/white"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="75dp"
                    android:layout_height="26dp"
                    app:layout_constraintBottom_toTopOf="@id/tvPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="9dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/product_name"
                    android:lines="2"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="9sp"
                    android:textColor="@color/white"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="6dp"
                    android:paddingVertical="3dp"
                    android:paddingHorizontal="8.5dp"
                    android:background="@drawable/category_flash_sale_background"
                    android:text="@string/category"
                    android:lines="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="9sp"
                    android:textColor="@color/black07"
                    tools:ignore="SmallSp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivSellerPhoto"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="7dp"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    android:src="@drawable/user_placeholder_photo"
                    android:padding="1dp"
                    app:strokeColor="@color/silver"
                    app:strokeWidth="1dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="49dp"
                    android:layout_height="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="8dp"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="1dp"
                    android:background="@drawable/discount_background"
                    android:text="@string/discount"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

</layout>